--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -639,6 +639,8 @@ than exponential.
   \label{fig:cfruntime}
 \end{figure}
 
+\subsection{Wang Improvements to Christofides}\label{sec:sub:wang}
+
 One drawback of the Christofides algorithm is the fact that each level must be maintained entirely in memory before
 moving on to the next level.  As has been show, the breadth of state graphs grows exponentially, so depth-first
 algorithms are generally preferred.  Wang~(1974)~\cite{wang} proposes two improvements to the Christofides
