--- a/final/algorithm.tex
+++ b/final/algorithm.tex
@@ -332,7 +332,7 @@ value of \(k\).  The final state of \(G\), which should be a complete graph of s
 and the final state of \(S\), which is a list of removed single and/or contracted vertices in the order removed are
 used to construct the final chromatic coloring.
 
-According to \propname~\ref{prop:greedy}, there exists some ordering of the vertices such that the greedy algorithm
+According to \theoremname~\ref{thm:greedy}, there exists some ordering of the vertices such that the greedy algorithm
 will produce an exact result for the chromatic number of a graph.  The removed vertices in reverse order removed is
 such an ordering.  Consider the example shown in \figurename~\ref{fig:reverse}.  If \(k=4\) and vertex \(v\) is to
 be removed since \(\deg(v)=3\), then in the reverse direction when \(v\) is added the fourth color is available for
