--- a/final/chromatic.tex
+++ b/final/chromatic.tex
@@ -354,6 +354,10 @@ This question is answered by \theoremname~\ref{thm:greedy}.
   algorithm produces an exact result.
 \end{proof}
 
+It will be shown in \sectionname~\ref{sec:sub:coloring} that one of the outputs of the proposed algorithm is such
+an ordering.  In fact, the final step of the proposed algorithm uses this fact to construct a final chromatic
+coloring.
+
 Matula, et al.~(1967)~\cite{matula} performed a study on the various well-known chromatic number greedy algorithms
 and concluded that ordering the vertices by non-increasing degree order, as in the Welsh Powell bound, worked best.
 Matula referred to this algorithm as the \emph{last-first} algorithm.  The results of a random graph analysis of
